// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Task Archived 1`] = `
<div
  className="list-item TASK_ARCHIVED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={true}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      aria-label="archiveTask-1"
      className="checkbox-custom"
      id="archiveTask-1"
      onClick={[Function]}
    />
  </label>
  <label
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Testing task"
    />
  </label>
  <div
    className="actions"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots Task Default 1`] = `
<div
  className="list-item TASK_INBOX"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      aria-label="archiveTask-1"
      className="checkbox-custom"
      id="archiveTask-1"
      onClick={[Function]}
    />
  </label>
  <label
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Testing task"
    />
  </label>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        aria-label="pinTask-1"
        className="icon-star"
        id="pinTask-1"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Task Pinned 1`] = `
<div
  className="list-item TASK_PINNED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      aria-label="archiveTask-1"
      className="checkbox-custom"
      id="archiveTask-1"
      onClick={[Function]}
    />
  </label>
  <label
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Testing task"
    />
  </label>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        aria-label="pinTask-1"
        className="icon-star"
        id="pinTask-1"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots TaskList Default 1`] = `null`;

exports[`Storyshots TaskList Empty 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    Empty ✔
  </div>
</div>
`;

exports[`Storyshots TaskList Loading 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <ul>
    <li>
      <div
        className="list-item TASK_INBOX"
      >
        <label
          className="checkbox"
        >
          <input
            defaultChecked={false}
            disabled={true}
            name="checked"
            type="checkbox"
          />
          <span
            aria-label="archiveTask-1"
            className="checkbox-custom"
            id="archiveTask-1"
            onClick={[Function]}
          />
        </label>
        <label
          className="title"
        >
          <input
            placeholder="Input title"
            readOnly={true}
            type="text"
            value="Do the laundry"
          />
        </label>
        <div
          className="actions"
          onClick={[Function]}
        >
          <a
            href="/"
            onClick={[Function]}
          >
            <span
              aria-label="pinTask-1"
              className="icon-star"
              id="pinTask-1"
            />
          </a>
        </div>
      </div>
    </li>
    <li>
      <div
        className="list-item TASK_INBOX"
      >
        <label
          className="checkbox"
        >
          <input
            defaultChecked={false}
            disabled={true}
            name="checked"
            type="checkbox"
          />
          <span
            aria-label="archiveTask-2"
            className="checkbox-custom"
            id="archiveTask-2"
            onClick={[Function]}
          />
        </label>
        <label
          className="title"
        >
          <input
            placeholder="Input title"
            readOnly={true}
            type="text"
            value="Brush your teeth"
          />
        </label>
        <div
          className="actions"
          onClick={[Function]}
        >
          <a
            href="/"
            onClick={[Function]}
          >
            <span
              aria-label="pinTask-2"
              className="icon-star"
              id="pinTask-2"
            />
          </a>
        </div>
      </div>
    </li>
    <li>
      <div
        className="list-item TASK_INBOX"
      >
        <label
          className="checkbox"
        >
          <input
            defaultChecked={false}
            disabled={true}
            name="checked"
            type="checkbox"
          />
          <span
            aria-label="archiveTask-3"
            className="checkbox-custom"
            id="archiveTask-3"
            onClick={[Function]}
          />
        </label>
        <label
          className="title"
        >
          <input
            placeholder="Input title"
            readOnly={true}
            type="text"
            value="Finish this tutorial"
          />
        </label>
        <div
          className="actions"
          onClick={[Function]}
        >
          <a
            href="/"
            onClick={[Function]}
          >
            <span
              aria-label="pinTask-3"
              className="icon-star"
              id="pinTask-3"
            />
          </a>
        </div>
      </div>
    </li>
    <li>
      <div
        className="list-item TASK_INBOX"
      >
        <label
          className="checkbox"
        >
          <input
            defaultChecked={false}
            disabled={true}
            name="checked"
            type="checkbox"
          />
          <span
            aria-label="archiveTask-4"
            className="checkbox-custom"
            id="archiveTask-4"
            onClick={[Function]}
          />
        </label>
        <label
          className="title"
        >
          <input
            placeholder="Input title"
            readOnly={true}
            type="text"
            value="Cook lunch"
          />
        </label>
        <div
          className="actions"
          onClick={[Function]}
        >
          <a
            href="/"
            onClick={[Function]}
          >
            <span
              aria-label="pinTask-4"
              className="icon-star"
              id="pinTask-4"
            />
          </a>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots TaskList With Pinned Items 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <ul>
    <li>
      <div
        className="list-item TASK_INBOX"
      >
        <label
          className="checkbox"
        >
          <input
            defaultChecked={false}
            disabled={true}
            name="checked"
            type="checkbox"
          />
          <span
            aria-label="archiveTask-1"
            className="checkbox-custom"
            id="archiveTask-1"
            onClick={[Function]}
          />
        </label>
        <label
          className="title"
        >
          <input
            placeholder="Input title"
            readOnly={true}
            type="text"
            value="Do the laundry"
          />
        </label>
        <div
          className="actions"
          onClick={[Function]}
        >
          <a
            href="/"
            onClick={[Function]}
          >
            <span
              aria-label="pinTask-1"
              className="icon-star"
              id="pinTask-1"
            />
          </a>
        </div>
      </div>
    </li>
    <li>
      <div
        className="list-item TASK_INBOX"
      >
        <label
          className="checkbox"
        >
          <input
            defaultChecked={false}
            disabled={true}
            name="checked"
            type="checkbox"
          />
          <span
            aria-label="archiveTask-2"
            className="checkbox-custom"
            id="archiveTask-2"
            onClick={[Function]}
          />
        </label>
        <label
          className="title"
        >
          <input
            placeholder="Input title"
            readOnly={true}
            type="text"
            value="Brush your teeth"
          />
        </label>
        <div
          className="actions"
          onClick={[Function]}
        >
          <a
            href="/"
            onClick={[Function]}
          >
            <span
              aria-label="pinTask-2"
              className="icon-star"
              id="pinTask-2"
            />
          </a>
        </div>
      </div>
    </li>
    <li>
      <div
        className="list-item TASK_INBOX"
      >
        <label
          className="checkbox"
        >
          <input
            defaultChecked={false}
            disabled={true}
            name="checked"
            type="checkbox"
          />
          <span
            aria-label="archiveTask-3"
            className="checkbox-custom"
            id="archiveTask-3"
            onClick={[Function]}
          />
        </label>
        <label
          className="title"
        >
          <input
            placeholder="Input title"
            readOnly={true}
            type="text"
            value="Finish this tutorial"
          />
        </label>
        <div
          className="actions"
          onClick={[Function]}
        >
          <a
            href="/"
            onClick={[Function]}
          >
            <span
              aria-label="pinTask-3"
              className="icon-star"
              id="pinTask-3"
            />
          </a>
        </div>
      </div>
    </li>
    <li>
      <div
        className="list-item TASK_INBOX"
      >
        <label
          className="checkbox"
        >
          <input
            defaultChecked={false}
            disabled={true}
            name="checked"
            type="checkbox"
          />
          <span
            aria-label="archiveTask-4"
            className="checkbox-custom"
            id="archiveTask-4"
            onClick={[Function]}
          />
        </label>
        <label
          className="title"
        >
          <input
            placeholder="Input title"
            readOnly={true}
            type="text"
            value="Cook lunch"
          />
        </label>
        <div
          className="actions"
          onClick={[Function]}
        >
          <a
            href="/"
            onClick={[Function]}
          >
            <span
              aria-label="pinTask-4"
              className="icon-star"
              id="pinTask-4"
            />
          </a>
        </div>
      </div>
    </li>
  </ul>
</div>
`;
